tests/paczka1/fuzzy1/73508545.err
Error in line 3: c0Uh S238 72,3
Error in line 2: SxeWATg S238 98,1
Error in line 22: S238 A842 58,6
Error in line 25: yXq05Kh S11 53,65
Error in line 21: SxeWATg A842 68,7
Error in line 13: yXq05Kh S11 29,1
Error in line 31: mSBS68 S238 51,1
Error in line 24: c0Uh S11 12,5
